<resources>
    <string name="app_name">StoryApp</string>
    <string name="login_image">Login Image</string>
    <string name="login_subtitle">Silahkan Login Dengan Akun Anda</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_attention">Belum Punya Akun ?</string>
    <string name="register">Registrasi</string>
    <string name="register_gagal">Registrasi Gagal</string>
    <string name="register_now">Registrasi Sekarang</string>
    <string name="register_image">Register Image</string>
    <string name="register_subtitle">Silahkan Isi Data Pribadi Anda</string>
    <string name="nama">Nama</string>
    <string name="name_required_error">Nama Perlu Diisi</string>
    <string name="storyapp_logo">StoryApp Logo</string>
    <string name="password_required_error">Paasword Harus Diisi</string>
    <string name="password_length_error">Password Minimal 8 Karakter</string>
    <string name="email_required_error">Email Harus Diisi</string>
    <string name="email_invalid_error">Format Email Salah</string>
    <string name="sudah_punya_akun">Sudah Punya Akun ?</string>
    <string name="masuk">Login</string>
    <string name="logout">LOGOUT</string>
    <string name="deskripsi_post">Deskripsi Postingan</string>
    <string name="upload">Upload</string>
    <string name="description">Deskripsi</string>
    <string name="story_photo">Story Photo</string>
    <string name="camera">Camera</string>
    <string name="post">Postingan Dari</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_story">Map Story</string>
    <string name="coba_lagi">MUAT KEMBALI</string>
    <string name="login_gagal">LOGIN GAGAL</string>
    <string name="login_berhasil">Anda Telah Masuk</string>
    <string name="story_gagal_diunggah">Story Gagal Diunggah</string>
    <string name="keluar_dari_akun">Apakah anda yakin ingin keluar dari akun ini?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="anda_telah_keluar">Anda Telah Keluar</string>
    <string name="lokasigagal">Lokasi Gagal Dimuat</string>
    <string name="minimal_8_karakter">Minimal 8 karakter</string>
    <string name="gambar_postingan_dari_user">Gambar postingan dari user</string>
    <string name="detail_story">Detail Story</string>
    <string name="image_load_failed">Gambar Gagal di Muat</string>
    <string name="registration_success">Registrasi Berhasil</string>
    <string name="add_story_title">Add Your Story</string>
    <string name="success_upload_story">Story Berhasil Diupload</string>
    <string name="error_empty_description">Deskripsi Tidak Boleh Kosong</string>
    <string name="error_no_image_selected">Image Tidak Boleh Kosong</string>
    <string name="error_permission_required">Belum Mendapatkan Izin</string>
    <string name="choose_picture">Pilih Image</string>
    <string name="add_story">Add Story</string>
</resources>