<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_imagestory"
            android:transitionName="image"
            android:contentDescription="@string/gambar_postingan_dari_user"
            android:layout_marginTop="16dp"
            android:layout_width="350dp"
            android:layout_height="350dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:transitionName="username"
            app:layout_constraintStart_toStartOf="@+id/iv_imagestory"
            app:layout_constraintTop_toBottomOf="@+id/iv_imagestory"
            android:text="@string/post"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:transitionName="name"
            app:layout_constraintEnd_toEndOf="@+id/iv_imagestory"
            app:layout_constraintStart_toStartOf="@+id/iv_imagestory"
            app:layout_constraintTop_toBottomOf="@+id/tv_post"
            tools:text="Ngurah8" />

        <TextView
            android:id="@+id/tv_created"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textSize="16sp"
            android:transitionName="name"
            app:layout_constraintEnd_toEndOf="@+id/tv_username"
            app:layout_constraintStart_toStartOf="@+id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_post"
            tools:text="waktu" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/deskripsi_post"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/iv_imagestory"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <TextView
            android:id="@+id/tv_postDescription"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:transitionName="description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_imagestory"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iv_imagestory"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Isi Deskripsi" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/iv_imagestory"
            app:layout_constraintEnd_toEndOf="@+id/iv_imagestory"
            app:layout_constraintStart_toStartOf="@+id/iv_imagestory"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>